# GeneratorTaskForExam

./: .gitignore  CMakeLists.txt  README.md  RandomGenerator.cpp  RandomGenerator.h  Task11.cpp  Task11.h  docker-compose.yml  main.cpp
Database/: DataStatistic.cpp  DataStatistic.h  DataTask.cpp  DataTask.h  LogIn.cpp  LogIn.h  MySqlDatabase.cpp  MySqlDatabase.h  Statistics.cpp  Statistics.h  TaskLabel.cpp  TaskLabel.h
Gui/: package-lock.json  package.json
Gui/src/: App.js  index.css  routes.js
Gui/src/components/: Card.js  Navbar.js  ResultModal.js
Gui/src/pages/: AuthPage.js  ListQuestionsPage.js  MainPage.js  QuestionsPage.js
Rest/: IResourceFactory.h  IService.h  IServiceSetting.h  LogIn.cpp  LogIn.h  LoginResourceFactory.cpp  LoginResourceFactory.h  PersonalStatistics.cpp  PersonalStatistics.h  ResourceFactoryClass.cpp  ResourceFactoryClass.h  ServiceSettingFactory.cpp  ServiceSettingFactory.h  StudentsAllStatistics.cpp  StudentsAllStatistics.h  TaskLabelResourceFactory.cpp  TaskLabelResourceFactory.h  TaskResourceFactory.cpp  TaskResourceFactory.h  TaskService.cpp  TaskService.h  TeacherStatistics.cpp  TeacherStatistics.h  TeachersMagazine.cpp  TeachersMagazine.h
Tasks/: ITask.cpp  ITask.h  Task1.cpp  Task1.h  Task11.cpp  Task11.h  Task13.cpp  Task13.h  Task14.cpp  Task14.h  Task16.cpp  Task16.h  Task17.cpp  Task17.h  Task22.cpp  Task22.h  Task23.cpp  Task23.h  Task4.cpp  Task4.h  Task6.cpp  Task6.h  Task7.cpp  Task7.h  Task8.cpp  Task8.h  TaskFactory.cpp  TaskFactory.h
UnitTests/: AlgorithmDijkstraTest.cpp
Utils/: AlgorithmDijkstra.cpp  AlgorithmDijkstra.h  AlgorithmShannon.cpp  AlgorithmShannon.h  GenerateMatrix.h  RandomGenerator.h  StrFormat.h
client/: .env  Dockerfile  package-lock.json  package.json
client/src/: App.js  App.scss  _globals.scss  index.css  mockData.js  routes.js
client/src/components/: AuthModal.js  CircleChart.js  Navbar.js  Question.js  ResultModal.js  Table.js  Variant.js  Variants.js
client/src/context/: AuthContext.js
client/src/hooks/: auth.hook.js  http.hook.js
client/src/pages/: AuthPage.js  ExamStatisticPage.js  GeneralRatingPage.js  JournalPage.js  MainPage.js  QuestionsPage.js  StatisticPage.js  (+4 more)
(+13 files in other folders)
